<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity"
    android:id="@+id/mainLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailTitle"
            android:layout_marginTop="24dp"
            android:text="Mercury"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/detailImage"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/mercury_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailDesc"
            android:layout_marginTop="20dp"
            android:text="@string/mercury"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distance"
            android:layout_marginTop="10dp"
            android:text="@string/planet_mercury_distance_from_earth"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailDesc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_moon"
            android:layout_marginTop="2dp"
            android:text="@string/planet_mercury_moons"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distance"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/planetSize"
            android:layout_marginTop="2dp"
            android:text="@string/planet_mercury_size"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_moon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orbitPeriod"
            android:layout_marginTop="2dp"
            android:text="@string/planet_mercury_orbital_period"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planetSize"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
